--- a/sample/yaml/user/user.yaml
+++ b/sample/yaml/user/user.yaml
@@ -28,5 +28,5 @@ fields:
   type: foreignkey
   relation:
     column: id
-    from: 'preference.yaml'
+    from: 'country/preference.yaml'
     key: name
