--- a/wercker.yml
+++ b/wercker.yml
@@ -15,10 +15,9 @@ build:
             echo "from location $(which python)"
             echo -p "packages: $(pip freeze)"
     - script:
+        name: pip install testing
+        code: |
+            pip install -e .[testing]
+    - script:
         name: Run pytest
-        code: pwd
-
-    # # Use this virtualenv step for python 3.2
-    # - virtualenv
-    #     name: setup virtual environment
-    #     python_location: /usr/bin/python3.2
+        code: py.test tests
