--- a/sample/yaml/dummy1.yaml
+++ b/sample/yaml/dummy1.yaml
@@ -1,9 +1,8 @@
-target: "xls:///in.xlsx#ダミーシート"
-name: User
+target: "xls:///sample.xlsx#ダミーシート"
 row: 5
 limit: 10
 handler:
-  path: out.json
+  path: dummy1.json
   type: json
   indent: 4
   sort_keys: true
